fixes #2957 - added an inner div to set focus onto so focus rectangle does not overlap with outer dialog border and arrow.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@9732 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -655,9 +655,11 @@ table .dijitComboButton .dijitButtonNode {
 	background: #b8b5b5;
 	color: black;
 	font-size: small;
-	padding: 2px 2px 2px 2px;
 }
 
+.dijitTooltipFocusNode {
+	padding: 2px 2px 2px 2px;
+}
 
 .dijitTooltipConnector {
 	position: absolute;
